[css] Fix alignment of planning poker list

--- a/app/assets/stylesheets/agileista.scss
+++ b/app/assets/stylesheets/agileista.scss
@@ -245,6 +245,10 @@ input.ctrl-show-stories {
   margin-top: rem-calc(10);
 }
 
+ul#secret-estimates {
+  margin-left: 0;
+}
+
 @media print {
   .user-story, .tb-backlog-item, .rw-backlog-item {
     border: 1px solid $white;
